# cuda-fluid-sim

./: .gitignore  CMakeLists.txt  README.md  create_cuda_notebook.py  create_history.sh  create_notebook.py  cuda_fluid_sim.ipynb  cuda_fluid_simulation.ipynb  interactive_fluid_sim.ipynb  test_cuda_build.sh
cuda-fluid-sim/: fluidsGL.cpp  fluidsGL_kernels.cu  fluidsGL_kernels.cuh
src/: fluidsGL.cpp  fluidsGL_kernels.cu  fluidsGL_kernels.cuh  simple_cuda_test.cu
